# kobayashi_maru

./: Jenkinsfile  Jenkinsfile.docker  README.md  TODO.md
assets/diagrams/: README.md  architecture_layers.puml  system_block_diagram.puml
docker/: Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.yml
docs/: ADR-001-RTOS-Selection.md  ARCHITECTURE.md  COMPATIBILITY_MATRIX.md  TODO.md  TRACEABILITY_MATRIX.md  TRL1_SUMMARY.md  TRL2_Completion_CHECKLIST.md  TRL2_VALIDATION_CHECKLIST.md  TRL3_Complete_BuildLog158 - trl3_zephyr.txt  TRL3_Completion_zephyr_on_MCXN947.md  TRL3_PLAN.md  TRL3_VALIDATION_CHECKLIST.md  TRL4_PLAN.md  TRL_Mapping_Plan_MCXN974.md
docs/architecture_analysis/: QuantumFrameworkVersions.md  qp_vs_mit_alternatives.md  qp_vs_non_qp_portability.md  why_companies_use_qp_or_do_not_use_qp.md  zephyr-renode-replace-qp-analysis.md
docs/build_logs/: #178 - trl3_zephyr.txt  #183 - trl3_zephyr.txt  TRL2_Complete_BuildLog76.txt  TRL3_Complete_BuildLog168 - trl3_zephyr.txt
firmware/: CMakeLists.txt  build.sh  mcxn947.ld  west.yml
firmware/freertos/: FreeRTOSConfig.h  README.md
firmware/include/: bsp.h  bsp.hpp  bsp_drivers.h  qpc.h  qpcpp.hpp  robot.h  robot.hpp
firmware/src/: main.c  main.cpp  qp_stubs.cpp  startup_mcxn947.c
firmware/src/bsp/: bsp_drivers.c
firmware/src/qp_app/: android_comm.c  android_comm.cpp  motor_ctrl.c  motor_ctrl.cpp  path_planner.c  path_planner.cpp  sensor_fusion.c  sensor_fusion.cpp  supervisor.c  supervisor.cpp  turret_ctrl.c  turret_ctrl.cpp
firmware/zephyr_app/: CMakeLists.txt  west.yml
firmware/zephyr_app/src/: main.c
hello_world-artifacts/: hello_world.dts  hello_world.elf  hello_world.repl  hello_world.resc  hello_world.robot
hello_world-artifacts/hello_world-sbom/frdm_mcxn947_mcxn947_cpu0/: hello_world-app.spdx  hello_world-build.spdx  hello_world-zephyr.spdx
scripts/: README.md  install-tools-existing-jenkins.sh  install-tools-simple.sh  provision-jenkins-agent.sh  provision-jenkins-master.sh  run_renode.sh  setup-docker-dev.sh  setup-jenkins-master.sh  setup-jenkins-tools.sh
simulation/models/: canfd_model.py  motor_model.py  turret_model.py
simulation/renode/: TRL3_mcxn947_zephyr.resc  TRL4_mcxn947_hardware.resc  canfd_model.py  frdm_mcxn947.repl  motor_model.py  robot_simulation.resc  turret_model.py
